fixed post page spacing issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -238,7 +238,7 @@ div.contentbox a:hover{
 	font-size: 0.95em;
 }
 #postinfoandratingsbar{
-	margin-bottom: 140px;
+	margin-bottom: 260px;
 }
 #map{
 	margin-top:50px;
